fix social share buttons
closes #45

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -4,6 +4,12 @@
 
 @import "prism.css";
 
+body {
+  background-image: url("../../public/noise.png");
+  background-size: 200px 200px;
+  background-position: 0 0;
+}
+
 h1,
 h2,
 h3,
